# toto

./: .gitignore  Cargo.toml  README.md  recent.csv
src/: app.rs  lib.rs  list.rs  main.rs
src/adapters/: jira.rs  mod.rs
src/adapters/storage/: sqlite.rs
src/adapters/tui/: app.rs  config.rs  mod.rs  runner.rs  ui.rs
src/adapters/tui/widgets/: colors.rs  footer.rs  gantt.rs  header.rs  item_card.rs  list.rs  mod.rs  popups.rs  sidebar.rs  utils.rs
src/domain/: command.rs  mod.rs  service.rs  task.rs
src/ports/: inbound.rs  outbound.rs
tests/: integration_test.rs
