[package]
name = "toto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.9", features = ["cargo"] }
serde_json = "1.0.120"
ratatui = "0.29.0"
crossterm = "0.28.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
directories = "6.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v4"] }
unicode-segmentation = "1.13.2"
